# ResuMatch

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/routes/: analyze.py
backend/services/: ai_analyzer.py  matcher.py  pdf_parser.py  skill_extractor.py
backend/tests/: test_analyze.py  test_main.py
backend/utils/: skills_db.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/background/: bg.webm
frontend/src/: App.tsx  main.tsx
frontend/src/components/analyze/: AnalyzeForm.tsx  ResultsPanel.tsx
frontend/src/components/landing/: LandingHero.tsx
frontend/src/components/layout/: Header.tsx  NavBar.tsx
frontend/src/pages/: AnalyzePage.tsx  HomePage.tsx  LoadingPage.tsx  ResultsPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/test/: smoke.test.js  smoke.test.tsx
frontend/src/types/: analysis.ts  aos.d.ts
